--- a/index.html
+++ b/index.html
@@ -1,21 +1,98 @@
-<script>
-function checkPassword() {
-    var password = document.getElementById("password").value;
-    if (password === "yourpassword") {
-        document.getElementById("content").style.display = "block";
-        document.getElementById("login").style.display = "none";
-    } else {
-        alert("Incorrect Password!");
-    }
-}
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Free Fire Tournament Room</title>
+    <style>
+        /* Modern Gradient Background */
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #ff416c, #ff4b2b);
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            color: white;
+        }
 
-<div id="login">
-    <input type="password" id="password" placeholder="Enter Password">
-    <button onclick="checkPassword()">Submit</button>
-</div>
+        /* Main Container */
+        .container {
+            background: rgba(255, 255, 255, 0.15);
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(10px);
+            max-width: 400px;
+            width: 90%;
+        }
 
-<div id="content" style="display:none;">
-    <h2>Room ID: 12345678</h2>
-    <h2>Password: ABCD</h2>
-</div>
+        /* Stylish Headings */
+        h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        h2 {
+            font-size: 20px;
+            margin: 10px 0;
+        }
+
+        /* Input Field */
+        input {
+            width: 80%;
+            padding: 10px;
+            border-radius: 5px;
+            border: none;
+            margin-bottom: 10px;
+        }
+
+        /* Modern Button */
+        button {
+            padding: 10px 20px;
+            border: none;
+            background: linear-gradient(135deg, #ff9966, #ff5e62);
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+
+        button:hover {
+            background: linear-gradient(135deg, #ff5e62, #ff9966);
+        }
+
+        /* Hide content initially */
+        .hidden {
+            display: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>🎮 Free Fire Tournament Room</h1>
+        <div id="login">
+            <input type="password" id="password" placeholder="Enter Password">
+            <button onclick="checkPassword()">Enter Room</button>
+        </div>
+        <div id="content" class="hidden">
+            <h2>🔥 Room ID: <span id="room-id">12345678</span></h2>
+            <h2>🔑 Password: <span id="room-password">ABCD</span></h2>
+        </div>
+    </div>
+
+    <script>
+        function checkPassword() {
+            var password = document.getElementById("password").value;
+            if (password === "freefire123") {
+                document.getElementById("content").style.display = "block";
+                document.getElementById("login").style.display = "none";
+            } else {
+                alert("❌ Incorrect Password! Try Again.");
+            }
+        }
+    </script>
+</body>
+</html>
