--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 document.getElementById("content").style.display = "block";
                 document.getElementById("login").style.display = "none";
             } else {
-                alert("❌ Incorrect Password! Try Again.");
+                alert("❌ Chala ja bsdk!");
             }
         }
     </script>
